fix: scrollbar

--- a/src/renderer/routes/Home/index.less
+++ b/src/renderer/routes/Home/index.less
@@ -1,6 +1,6 @@
 .static-width-wrapper {
   overflow: hidden;
-  overflow-y: overlay;
+  overflow-y: auto;
 }
 
 body.ant-scrolling-effect .disable-mouseevents-on-ant-modal-open {
